# Nexora-AI-Resume-Copilot

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: analytics.py  assistant.py  interviews.py  job_matches.py  learning.py  reports.py  resumes.py  router.py  users.py
apps/api/app/core/: config.py  logging.py
apps/api/app/db/: init_db.py  session.py
apps/api/app/middleware/: rate_limit.py
apps/api/app/models/: __init__.py  analytics.py  interview.py  job_match.py  learning.py  report.py  resume.py  user.py
apps/api/app/schemas/: analytics.py  common.py  interview.py  job_match.py  learning.py  resume.py  user.py
apps/api/app/services/: docx_exporter.py  resume_parser.py
apps/api/app/services/ai/: assistant_service.py  embeddings.py  interview_engine.py  job_matcher.py  learning_engine.py  llm.py  resume_analyzer.py  resume_engine.py  resume_parser.py  skills.py
apps/api/app/services/security/: auth.py  users.py
apps/api/app/services/storage/: provider.py
apps/api/tests/: test_ai_services.py
apps/web/: Dockerfile  next.config.mjs  package.json  proxy.ts  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/(dashboard)/: layout.tsx
apps/web/lib/: utils.ts
apps/web/services/: api.ts  assistant.ts  demo-data.ts  types.ts
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  ENVIRONMENT.md
infra/: render.yaml
(+31 files in other folders)
