[project]
name = "career-copilot-api"
version = "1.0.0"
description = "FastAPI backend for AI Resume + Interview Copilot"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.3.0",
  "python-multipart>=0.0.9",
  "pypdf>=4.2.0",
  "langchain>=0.3.0",
  "langchain-openai>=0.2.0",
  "langchain-google-genai>=2.0.0",
  "sentence-transformers>=3.0.0",
  "numpy>=2.0.0",
  "scikit-learn>=1.5.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.0",
  "slowapi>=0.1.9",
  "structlog>=24.2.0",
  "reportlab>=4.2.0",
  "cloudinary>=1.40.0",
  "boto3>=1.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
  "httpx>=0.27.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
